--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,35 @@ body {
   font-weight: 900;
 }
 
+p {
+  margin: 0;
+}
+
+h1 {
+  background: #edc22e;
+  color: #f9f6f2;
+  width: 75px;
+  height: 75px;
+  font-size: 24px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+}
+
 .field-cell {
   background: #d6cdc4;
   width: 75px;
@@ -85,23 +114,9 @@ body {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  margin-bottom: 24px;
-  padding: 10px;
+  margin-bottom: 15px;
+  padding: 5px;
   box-sizing: border-box;
-}
-
-h1 {
-  background: #edc22e;
-  color: #f9f6f2;
-  width: 75px;
-  height: 75px;
-  font-size: 24px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  margin: 0;
 }
 
 .info {
@@ -134,23 +149,23 @@ h1 {
   width: 90px;
   height: 75px;
 
-  transition: 0.25s ease background;
+  transition: 0.25s ease background-color;
 }
 
 .start {
-  background: #1dae28;
+  background-color: #1dae28;
   font-size: 20px;
 
   &:hover {
-    background: #179921;
+    background-color: #179921;
   }
 }
 
 .restart {
-  background: #f1b2b2;
+  background-color: #f1b2b2;
 
   &:hover {
-    background: #f87474;
+    background-color: #f87474;
   }
 }
 
@@ -160,20 +175,10 @@ h1 {
   background: #d6cdc4;
   color: #776e65;
   padding: 10px;
+  margin-top: 20px;
   text-align: center;
   border-radius: 5px;
   font-size: 20px;
-}
-
-.hidden {
-  display: none;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 350px;
 }
 
 .message-win {
@@ -183,5 +188,5 @@ h1 {
 
 .message-container {
   width: 100%;
-  height: 150px;
+  height: max-content;
 }
